--- a/views/schedule.hbs
+++ b/views/schedule.hbs
@@ -9,8 +9,8 @@
           <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Trip</th>
           <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Dates</th>
           <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Destination</th>
-          <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Early Bird Price Rate</th>
-          <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Regular Price Rate</th>
+          <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Early Bird Rate</th>
+          <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Regular Rate</th>
           <!-- <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Instructors</th> -->
           <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white"></th>
         </tr>
