--- a/views/schedule.hbs
+++ b/views/schedule.hbs
@@ -18,7 +18,7 @@
       <tbody class="lh-copy">
       {{#each trips as |t|}}
         <tr>
-          <td class="pv3 pr3 bb b--black-20"><a class="link f5 fw6 db blue no-underline underline-hover" href="/trips/{{t.tripID}}">{{t.name}}</a></td>
+          <td class="pv3 pr3 bb b--black-20"><a class="link f5 fw6 db blue no-underline underline-hover" href="/trips/{{t.tripID}}">{{t.tripName}}</a></td>
           <td class="pv3 pr3 bb b--black-20">from <span class="fw6 green">{{t.startDate}}</span><br>to <span class="fw6 green">{{t.endDate}}</span></td>
           <td class="pv3 pr3 bb b--black-20"><span class="fw6 purple">{{t.destinations}}</span></td>
           <td class="pv3 pr3 bb b--black-20"><span class="fw6 light-purple">{{t.earlyBirdPrice}}</span><br><br>Apply by <span class="fw6">{{t.earlyBirdDeadline}}</span></td>
