--- a/views/home.hbs
+++ b/views/home.hbs
@@ -45,7 +45,7 @@
         Studying philosophy and traveling have been my passions for a long time. After I finished my doctoral studies at the New School for Social Research, I brought these two passions together and over the years created a venue through which participants in a travel philosophy class can study and explore the life and the works of a philosopher or a school of philosophy in situ. While studying the works of philosophers, we often forget the context in and through which they were created. This context has to do with the places where they lived, the historical conditions of their times, and the people of these times, and I believe it is important to study them as much as it is to study their biographies from books. After consulting with several philosophy teachers who were all encouraging, I embarked on this project with a first Philomobile trip to the Nietzsche sites in May 2010 (more information about this trip is in the newsletter). 
       </p>
       <p class="f5 lh-copy measure">
-        Please join us in these adventures. 
+        Please join us on these adventures. 
       </p>
     </div>
   </article>
@@ -58,8 +58,23 @@
     </header>
     <div class="fn fl-ns w-50-ns">
       <p class="f5 lh-copy measure mt0-ns">
-        Philomobile is a project designed for those who would like to explore and study philosophy in situ. We set two goals for such a philosophical endeavor: to recreate the conditions of the past on site within the context of our own times and to explore the other aspects of the epoch and the spirit of the times, in which philosophers lived. Some of these aspects are art, literature, architecture, science and religion.
+        Philomobile is a travel organization designed for those who want more from their vacations than bland resorts, overcrowded museum tours, and a beach tan. World travel is first and foremost a sensual experience, but at Philomobile we also deliver intellectual pleasure. Instead of cheap trinkets, your souvenirs will be a satisfied mind and body. 
       </p>
+
+ 
+      <p class="f5 lh-copy measure mt0-ns">
+        Philomobile, literally means “moving philosophy” so think of us as a modern day peripatetic school, that offers a unique blend of academic tourism and cultural education. We emphasize learning on site, and our trips are designed for those interested in culture.  All Philomobile projects have an instructional component led by experienced professors from accredited universities and colleges, combined with sightseeing led by regional tour guides. In addition, every trip explores the literature, fine art, science, religions, and historical context within which philosophy flourished. 
+      </p>
+ 
+ 
+       <p class="f5 lh-copy measure mt0-ns">
+        At Philomobile we welcome curious adventurers from educational and cultural institutions, retirement communities, and the general public. From the golden age of philosophy in ancient Greece to existentialism in France, and from the Islamic conquest of Spain to Nietzsche scholarship in Germany, we offer an array of diverse travel packages at competitive prices. While our current travel courses are all on the European continent, we hope to expand to more corners of the globe in the future. 
+      </p>
+
+       <p class="f5 lh-copy measure mt0-ns">
+        If you want more out of travel than being just another tourist lost in the anonymous crowd, we encourage Socratic dialogue between our travellers. So if you are a free spirit who craves stimulating discussions and exposure to new cultures, please join us on one of our journeys.
+      </p>
+      
       <p class="f5 lh-copy measure">
         Philomobile projects are designed both for those who are interested in the adventure of studying philosophy on the road. All Philomobile projects have a class component led by a professor and a sightseeing component led by a tour guide, both of which are integrated. For specific classes, please see our schedule.
       </p>
