--- a/views/trip.hbs
+++ b/views/trip.hbs
@@ -1,7 +1,7 @@
 <section class="mw7 center">
   <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">{{trip.tripName}}</h2>
   <div class="tc">	
-  	<div class="f6 ttu tracked blue pb2">Taught by <strong>{{trip.teachers}}</strong></div>
+  	<div class="f6 ttu tracked blue pb2">Instructor: <strong>{{trip.teachers}}</strong></div>
    	<div class="f6 ttu tracked purple">from <strong>{{trip.startDate}}</strong> to <strong>{{trip.endDate}}</strong></div>
   </div>
    
@@ -30,7 +30,7 @@
 	{{/each}}
 
 	<div class="tc avenir pt5">
-		<a class="grow bg-green white f1 f1-l link bg-animate hover-bg-blue hover-white dib pa4 ph5-l ba b--dotted" href="https://philomobile.typeform.com/to/mEyApF">Apply Now</a>
+		<a class="grow bg-green white f1 f1-l link bg-animate hover-bg-blue hover-white dib pa4 ph5-l ba b--dotted" href="/apply">Apply Now</a>
 	</div>
 </article>
 </section>
