--- a/views/trips.hbs
+++ b/views/trips.hbs
@@ -1,5 +1,5 @@
 <section class="mw7 center avenir">
-  <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">Philosophy Trips</h2>
+  <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">PhiloTrips</h2>
 
 <section class="tc pb3 b">
   {{#if hasEnded}}
