--- a/views/apply.hbs
+++ b/views/apply.hbs
@@ -1,5 +1,23 @@
 <section class="mw7 center avenir">
   <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">Apply</h2>
+
+  
+   <h2 class="tc blue">Application Terms</h2>
+ 
+<p>
+	Before submitting your application, please review the following information regarding the registration process and the formation of Philo Trips. Please also review the dates and prices on the Schedule, keeping in mind that airfare is NOT included (unless indicated otherwise). Certainly feel free to contact the instructor of the PhiloTrip in which you are interested, or anyone else at Philomobile with questions regarding logistics, timelines, refund policies and whatever else may be of concern.
+</p>
+
+<p>
+	The listed Philo Trip will be guaranteed once the minimum number of applications (20) has been received. Applications must be submitted four (4) months before departure along with full payment. Philomobile kindly asks that participants apply sooner rather than later because we can only guarantee our trips with sufficient enrollment. If the trip is cancelled by Philomobile, all applicants will receive a full refund. If applicants cancel their trip, they will be charged 25% of their payment as a cancellation fee. 	
+</p>
+
+<p class="pb5">
+	Once enrollment has been guaranteed, we will immediately be in touch. At this time participants will purchase airline tickets, our tour operator will finalize hotel accommodations, and detailed information packets regarding the travel itinerary will be sent out. On the first scheduled day, participants will gather at the hotel in their designated city to meet their Philomobile lecturer, the tour operator and their fellow travelers. Again, please be in contact with any questions and concerns. We welcome all feedback.
+
+</p>
+
+
   <h2 class="tc blue ">Step 1: Fill in the Form Below</h2>
 	<div class="typeform-widget" data-url="https://philomobile.typeform.com/to/mEyApF" data-text="Philomobile Personal Details Form" style="width:100%;height:500px;"></div>
 	<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
