--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,3 +18,10 @@ iframe {
 p {
 	text-align: justify;
 }
+
+::selection {
+  background: #FBF1A9;
+}
+::-moz-selection {
+  background: #FBF1A9;
+}
