--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,7 +17,7 @@
 			<a class="black f6 f5-l link bg-animate  hover-bg-light-gray dib pa3 ph4-l" href="/schedule">Schedule</a>
 			<a class="black f6 f5-l link bg-animate  hover-bg-light-gray dib pa3 ph4-l" href="/instructors">Instructors</a>
 			<a class="black f6 f5-l link bg-animate  hover-bg-light-gray dib pa3 ph4-l" href="/subscribe">Subscribe</a>
-			<a class="black f6 f5-l link bg-animate  hover-bg-light-gray dib pa3 ph4-l" href="mailto:info@philomobile.com">Contact</a>
+			<a class="black f6 f5-l link bg-animate  hover-bg-light-gray dib pa3 ph4-l" href="/contact">Contact</a>
 			<a class="black f6 f5-l link bg-animate  hover-bg-light-gray dib pa3 ph4-l" href="/blog">Blog</a>
 			<a class="grow black f6 f5-l link bg-animate hover-bg-green hover-white dib pa3 ph4-l ba b--dotted" href="/apply">Apply</a>
 		</nav>
