--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -6,7 +6,7 @@
   <h1 class="f4 bg-near-black white mv0 pv2 ph3">E-mail Address</h1>
   <div class="pa3 bt">
     <p class="f6 f5-ns lh-copy measure mv0">
-    info@philomobile.com
+    <a class="link black hover-bg-light-gray" href="mailto:info@philomobile.com">info@philomobile.com</a>
     </p>
   </div>
 </article>
