--- a/views/home.hbs
+++ b/views/home.hbs
@@ -42,7 +42,7 @@
     </header>
     <div class="fn fl-ns w-50-ns">
       <p class="f5 lh-copy measure mt0-ns">
-        Studying philosophy and traveling have been my passions for a long time. After I finished my doctoral studies at the New School for Social Research, I brought these two passions together and over the years created a venue through which participants in a travel philosophy class can study and explore the life and the works of a philosopher or a school of philosophy in situ. While studying the works of philosophers, we often forget the context in and through which they were created. This context has to do with the places where they lived, the historical conditions of their times, and the people of these times, and I believe it is important to study them as much as it is to study their biographies from books. After consulting with several philosophy teachers who were all encouraging, I embarked on this project with a first Philomobile trip to the Nietzsche sites in May 2010 (more information about this trip is in the newsletter). 
+        Studying philosophy and traveling have been my passions for a long time. After I finished my doctoral studies at the New School for Social Research, I brought these two passions together and over the years created a venue through which participants in a travel philosophy class can study and explore the life and the works of a philosopher or a school of philosophy on site. While studying the works of philosophers, we often forget the context in and through which they were created. This context has to do with the places where they lived, the historical conditions of their times, and the people of these times, and I believe it is important to study them as much as it is to study their biographies from books. After consulting with several philosophy teachers who were all encouraging, I embarked on this project with a first Philomobile trip to the Nietzsche sites in May 2010 (more information about this trip is in the newsletter). 
       </p>
       <p class="f5 lh-copy measure">
         Please join us on these adventures. 
@@ -68,7 +68,7 @@
  
  
        <p class="f5 lh-copy measure mt0-ns">
-        At Philomobile we welcome curious adventurers from educational and cultural institutions, retirement communities, and the general public. From the golden age of philosophy in ancient Greece to existentialism in France, and from the Islamic conquest of Spain to Nietzsche scholarship in Germany, we offer an array of diverse travel packages at competitive prices. While our current travel courses are all on the European continent, we hope to expand to more corners of the globe in the future. 
+        At Philomobile we welcome curious adventurers from educational and cultural institutions, retirees, and the general public. From the golden age of philosophy in ancient Greece to existentialism in France, and from the Islamic conquest of Spain to Nietzsche scholarship in Germany, we offer an array of diverse travel packages at competitive prices. While our current travel courses are all on the European continent, we hope to expand to more corners of the globe in the future. 
       </p>
 
        <p class="f5 lh-copy measure mt0-ns">
@@ -76,7 +76,7 @@
       </p>
       
       <p class="f5 lh-copy measure">
-        Philomobile projects are designed both for those who are interested in the adventure of studying philosophy on the road. All Philomobile projects have a class component led by a professor and a sightseeing component led by a tour guide, both of which are integrated. For specific classes, please see our schedule.
+        Philomobile projects are designed for those who are interested in the adventure of studying philosophy on the road. For specific trips, please see our schedule.
       </p>
     </div>
   </article>
