--- a/views/trip.hbs
+++ b/views/trip.hbs
@@ -2,7 +2,9 @@
   <h2 class="baskerville f1 measure tc fw5 ph3 ph0-l">{{trip.tripName}}</h2>
   <div class="tc">	
   	<div class="f6 ttu tracked blue pb2">Instructor: <strong>{{trip.teachers}}</strong></div>
-   	<div class="f6 ttu tracked purple">from <strong>{{trip.startDate}}</strong> to <strong>{{trip.endDate}}</strong></div>
+   	<div class="f6 ttu tracked purple pb2">from <strong>{{trip.startDate}}</strong> to <strong>{{trip.endDate}}</strong></div>
+   	<div class="f6 ttu tracked green pb2">Early bird price <strong>{{{trip.earlyBirdPrice}}}</strong></div>
+   	<div class="f6 ttu tracked light-purple pb2">Regular price <strong>{{trip.regularPrice}}</strong></div>
   </div>
    
 	<article class="baskerville pb2">
